[package]
name = "berryimu"
version = "0.1.0"
edition = "2021"

authors = ["Yusuf Simonson <simonson@gmail.com>"]
description = "A pure-rust library for interfacing with BerryIMUv3"
repository = "https://github.com/ysimonson/berryimu"
categories = ["Hardware support", "Embedded development"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
i2cdev = "0.5.1"
