[package]
name = "berryimu"
version = "0.1.0"
edition = "2021"

authors = ["Yusuf Simonson <simonson@gmail.com>"]
description = "A pure-rust library for interfacing with BerryIMUv3"
repository = "https://github.com/ysimonson/berryimu"
categories = ["Hardware support", "Embedded development"]
license = "Apache-2.0"
readme = "README.md"

[features]
default = ["i2c", "spi"]
i2c = ["i2cdev"]
spi = ["spidev"]

[dependencies]
# i2c dependencies
i2cdev = { version = "0.5.1", optional = true }
# spi dependencies
spidev = { version = "0.5.1", optional = true }
